--- a/medicos/templates/listar-resultados.html
+++ b/medicos/templates/listar-resultados.html
@@ -1,10 +1,10 @@
 {% extends 'baseMedicos.html' %} {% load static %} 
 {% load widget_tweaks %}
-{% block MenuLogo%}  
+{% block MenuLogo%}
+{% if medico_imagen.imagen %}
     <a href="#" class="text-center ms-logo-img-link"> <img src="{{ medico_imagen.imagen.url }}" class="img" alt="logo"></a>
+{% endif %}
     <h5 class="text-center text-white mt-2">{{nombre_doctor}}</h5>
-
-
 {% endblock MenuLogo%}
 
 {% block Bienvenido%}
@@ -12,12 +12,13 @@
 {% endblock Bienvenido%}
 
 {% block logoLogout %}
-<img class="ms-user-img ms-img-round float-right" 
-    src="{{ medico_imagen.imagen.url }}" alt="people"> 
+    {% if medico_imagen.imagen %}
+        <img class="ms-user-img ms-img-round float-right" src="{{ medico_imagen.imagen.url }}" alt="people"> 
+    {% endif %}
 {% endblock logoLogout %}
 
 {% block MenuDoctores %} 
- <div class="col-md-12">
+  <div class="col-md-12">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb pl-0">
             <li class="breadcrumb-item"><a href="{% url 'medicos:menu_medico' %}"><i class="material-icons">home</i> Home</a></li>
