--- a/medicos/templates/generar-diagnostico.html
+++ b/medicos/templates/generar-diagnostico.html
@@ -1,19 +1,20 @@
 
 {% extends 'baseMedicos.html' %} {% load static %} {% load widget_tweaks %} 
-{% block MenuLogo%}  
-    <a href="#" class="text-center ms-logo-img-link"> <img src="{{ medico_imagen.imagen.url }}" alt="logo"></a>
+{% block MenuLogo%}
+{% if medico_imagen.imagen %}
+    <a href="#" class="text-center ms-logo-img-link"> <img src="{{ medico_imagen.imagen.url }}" class="img" alt="logo"></a>
+{% endif %}
     <h5 class="text-center text-white mt-2">{{nombre_doctor}}</h5>
-
 {% endblock MenuLogo%}
-
 
 {% block Bienvenido%}
     <h6 class="dropdown-header ms-inline m-0"><span class="text-disabled">Bienvenid@, Dr(a). {{nombre_doctor}}</span></h6>
 {% endblock Bienvenido%}
 
 {% block logoLogout %}
-<img class="ms-user-img ms-img-round float-right" 
-    src="{{ medico_imagen.imagen.url }}" alt="people"> 
+    {% if medico_imagen.imagen %}
+        <img class="ms-user-img ms-img-round float-right" src="{{ medico_imagen.imagen.url }}" alt="people"> 
+    {% endif %}
 {% endblock logoLogout %}
 
 {% block MenuDoctores %} 
